--- a/scss/style.scss
+++ b/scss/style.scss
@@ -216,3 +216,53 @@ body {
     font-size: 20px;
   }
 }
+
+.green-box {
+  height: 300px;
+  width: 300px;
+  background:
+          linear-gradient(45deg,#D2E08C 50%, transparent 50%) 0 0/50% 50%,
+          linear-gradient(90deg,#B4CE47 50%, transparent 50%) 0 0/100% 50%,
+          linear-gradient(135deg,#B4CE47 50%, transparent 50%) 100% 0/50% 50%,
+          linear-gradient(180deg,#A4BE45 50%, transparent 50%),
+          linear-gradient(225deg,#A4BE45 50%, transparent 50%),
+          linear-gradient(270deg,#7EA03F 50%, transparent 50%) -50% -50%,
+          linear-gradient(315deg,#7EA03F 50%, transparent 50%),
+          linear-gradient(360deg,#D2E08C 50%, transparent 50%);
+  background-repeat:no-repeat;
+  box-shadow:
+          0px -10px 10px -10px #B8C67B, /* 上邊陰影 */
+          10px 0px 10px -10px #B8C67B,  /* 右邊陰影 */
+          0px 10px 10px -10px #B8C67B;  /* 下邊陰影 */
+
+  position: absolute;
+  top: 30%;
+  left: 40%;
+
+  animation-name: rotate;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: steps(1);
+  
+  @keyframes rotate {
+    0% {
+      transform: rotate(0);
+    }
+
+    25% {
+      transform: rotate(90deg);
+    }
+
+    50% {
+      transform: rotate(180deg);
+    }
+
+    75% {
+      transform: rotate(270deg);
+    }
+
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+}
